--- a/test_パターン3_change/test_site/CSS/common.css
+++ b/test_パターン3_change/test_site/CSS/common.css
@@ -28,7 +28,7 @@ header {
   left: 0;
   width: 99%;
   height: 80px;
-  background-color: #EAD7BB;
+  background-color: #113946;
   z-index: 10;
   display: flex;
   justify-content: space-between;
